source/css/style.css
h2 {
  font-size: 40px;
}

html, body, div {
  margin: 0;
  padding: 0;
  cursor: none;
}

#rom-check {
  padding: 20px;
  font-family: vigaregular;
  font-size: 150%;
}

#rom-check h1 {
  margin: 0;
}

#rom-check img {
  position: relative;
  top: 3px;
}

#rom-check .input-status {
  text-align: center;
  float: left;
  max-width: 150px;
  min-width: 100px;
  margin-left: 20px;
  margin-right: 20px;
}

#rom-check .input-status ul {
  margin-left: 0;
  padding-left: 0;
}

#rom-check .input-status li {
  list-style-type: none;
  /*text-align: center;*/
  border-width: 1px;
  border: 1px solid white;
}

#rom-check .input-status .pressed {
  background: red;
  color: white;
  font-weight: bold;
  border: 1px solid black;
}

#rom-check .input {
  opacity: 0.5;
}

#moonshot {
  color: #DDD;
  height: 100%;
}

#scene {
  height: 100%;
  width: 100%;
  background-image: url(../images/skyline.png);
  image-rendering: -webkit-optimize-contrast;
  background-size: cover;
  position: absolute;
  margin: 0;
}

#scene li div {
  position: relative;
}
.slides section > section > img {
  width: 100%;
  height: 100%;
}

.horsie {
  background: url(../images/horsie.svg);
  width: 160px;
  height: 120px;
  top: 722px;
  margin-left: 1693px;
  background-size: cover;
}

.dude {
  background: url(../images/dude.svg);
  width: 120px;
  height: 160px;
  top: 677px;
  background-size: cover;
  position: absolute;
}

.grass {
  background: url(../images/grass.svg);
  width: 2520px;
  height: 240px;
  top: 838px;
  background-size: 120px;
  background-repeat: repeat-x;
}

.bourbon {
  background: url(../images/bourbon.svg);
  top: 172px;
  width: 70px;
  height: 70px;
  float: left;
  background-size: 350px;
  background-repeat: repeat-x;
}

.bourbonAnim1 {
  -webkit-animation: bourbonAnim1 0.7s steps(7) infinite;
}

.bourbonAnim2 {
  -webkit-animation: bourbonAnim2 0.7s steps(7) infinite;
}
.bourbonAnim3 {
  -webkit-animation: bourbonAnim3 0.7s steps(7) infinite;
}

@-webkit-keyframes bourbonAnim1 {
  from { background-position: 0px; }
  to { background-position: -350px; }
}

@-webkit-keyframes bourbonAnim2 {
  from { background-position: 200px; }
  to { background-position: -150px; }
}

@-webkit-keyframes bourbonAnim3 {
  from { background-position: 100px; }
  to { background-position: -250px; }
}


.barrel1 {
  height: 120px;
  width: 120px;
  top: 720px;
  background: url(../images/barrel.svg);
  background-size: cover;
  -webkit-animation: barrel1Move 9.45s linear infinite,
    barrelRoll 1.8s linear infinite;
}

@-webkit-keyframes barrel1Move {
  from { margin-left: 2020px; }
  to { margin-left: -500px; }
}

@-webkit-keyframes barrelRoll {
  from { -webkit-transform: rotate(0deg); }
  to { -webkit-transform: rotate(-360deg); }
}

.dudeRun {
  -webkit-animation: dudeRunAnimSlow 0.7s steps(7) 12,
    dudeRunMove 10s linear infinite,
    dudeRunAnimFast 0.2s steps(7) 8;
  -webkit-animation-delay: 0s, 0s, 8.4s;
}

@-webkit-keyframes dudeRunMove {
  from {
    left: 200px;
    -webkit-animation-timing-function: ease-out;
  }
  80% { left: -50px; }
  84% {
    left: -50px;
    -webkit-animation-timing-function: ease-out;
  }
  to { left: 200px;}
}

@-webkit-keyframes dudeRunAnimSlow {
  from { background-position: 0px 0px; }
  to { background-position: -840px 0px; }
}
@-webkit-keyframes dudeRunAnimFast {
  from { background-position: 0px 0px; }
  to { background-position: -840px 0px; }
}

.horsieRun {
  -webkit-animation: horsieRunAnimSlow 0.7s steps(7) 12,
    horsieRunMove 10s linear infinite,
    horsieRunAnimFast 0.2s steps(7) 8;
  -webkit-animation-delay: 0s, 0s, 8.4s;
}

@-webkit-keyframes horsieRunMove {
  from {
    left: 200px;
    -webkit-animation-timing-function: ease-out;
  }
  80% { left: -50px; }
  84% {
    left: -50px;
    -webkit-animation-timing-function: ease-out;
  }
  to { left: 200px;}
}

@-webkit-keyframes horsieRunAnimSlow {
  from { background-position: 0px 0px; }
  to { background-position: -1120px 0px; }
}
@-webkit-keyframes horsieRunAnimFast {
  from { background-position: 0px 0px; }
  to { background-position: -1120px 0px; }
}

.floorAnim {
  -webkit-animation: floorPan 0.6s linear infinite;
}

@-webkit-keyframes floorPan {
  from { background-position: 0px; }
  to { background-position: -120px; }
}

